Fixed spacing in header

--- a/src/Forecast.css
+++ b/src/Forecast.css
@@ -36,12 +36,13 @@ li {
 }
 
 h6 {
-  padding-right: 40px; 
+  margin-left: 40px; 
 }
 
 h5 {
-  text-align: right;
+  margin-left: 30px;  
 }
+
  h4 {
   margin-left: 20px; 
  }
@@ -98,7 +99,7 @@ h5 {
  }
 
  .row {
-   padding: 0; 
+   display: flexible;  
  }
 
  .Style {
